# wallet-api

./: .env  .gitignore  .pre-commit-config.yaml  Makefile  README.md  breakdown.md  docker-compose.yml  pyproject.toml  task-requirement.txt
ci/: api.Dockerfile
entrypoints/: start.gunicorn.local.sh  start.gunicorn.sh
src/b2broker/app/common/: __init__.py  exc_handler.py  exceptions.py  utils.py
src/b2broker/app/core/: apps.py
src/b2broker/app/core/api/: exc_handler.py  urls.py
src/b2broker/app/core/api/filters/: wallet_filters.py
src/b2broker/app/core/api/serializers/: __init__.py  base.py  transaction_serializers.py  wallet_serializers.py
src/b2broker/app/core/api/views/: __init__.py  point_of_sale_api.py  wallet_api.py
src/b2broker/app/core/migrations/: 0001_initial.py  0002_create_sequence.py  0003_alter_pointofsale_wallet_id.py
src/b2broker/app/core/misc/: __init__.py  constants.py
src/b2broker/app/core/models/: __init__.py  base.py  point_of_sale.py  wallet.py
src/b2broker/app/core/services/: __init__.py  transaction_service.py  wallet_service.py
src/b2broker/config/: asgi.py  settings.py  urls.py  wsgi.py
src/b2broker/config/middlewares/: __init__.py  logging_mid.py
